5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1798_2569.log
== SUBMITION (2019-06-12 13:07:59) 
-- CODE:
from numpy import*
x=array(eval(input("numeros:")))
soma=0
d=0
for i in range(size(x)):
	soma=soma+x[i]
media+soma/size(x)
from math import*
for i in range(size(x)):
	d=d+(x[i]-media)**2
	k=size(x)-1
	j=sqrt(d/k)
print(round(j,3))
-- EXECUTION TIME:
1.03726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2569/main.py", line 7, in <module>
    media+soma/size(x)
NameError: name 'media' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:08:28) 
-- CODE:
from numpy import*
x=array(eval(input("numeros:")))
soma=0
d=0
for i in range(size(x)):
	soma=soma+x[i]
media=soma/size(x)
from math import*
for i in range(size(x)):
	d=d+(x[i]-media)**2
	k=size(x)-1
	j=sqrt(d/k)
print(round(j,3))
-- EXECUTION TIME:
1.2162
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
numeros:0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:09:22) 
-- CODE:
from numpy import*
x=array(eval(input("numeros:")))
soma=0
d=0
for i in range(size(x)):
	soma+=x[i]
media=soma/size(x)
from math import*
for i in range(size(x)):
	d=d+(x[i]-media)**2
	k=size(x)-1
	j=sqrt(d/k)
print(round(j,3))
-- EXECUTION TIME:
1.81665
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:09:22) 
-- CODE:
from numpy import*
x=array(eval(input("numeros:")))
soma=0
d=0
for i in range(size(x)):
	soma+=x[i]
media=soma/size(x)
from math import*
for i in range(size(x)):
	d=d+(x[i]-media)**2
	k=size(x)-1
	j=sqrt(d/k)
print(round(j,3))
-- EXECUTION TIME:
2.42585
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
